[project]
name = "hplc-rt-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyprojroot>=0.3.0",
    "pyyaml>=6.0.3",
    "rdkit>=2026.3.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist>=3.8.0",
    "ruff",
]
